# raylib-game

./: .gitignore  CMakeLists.txt  LICENSE  compile.bat  config.txt
src/: actor.c  actor.h  actorsBuffer.c  actorsBuffer.h  collision.c  collision.h  config.c  config.h  drawActor.c  drawActor.h  game.c  game.h  main.c  player.c  shape.h
